--- a/hugo.yaml
+++ b/hugo.yaml
@@ -47,10 +47,10 @@ markup:
 
 params:
   author: les zartistes
-  authorimage: ../assets/images/global/author.webp
+  authorimage: ../assets/images/global/ampoule.svg
   og_image: /images/mains.png
   moto: "La créativité au service de l'innovation"
-  description: "Artlab est une plateforme qui met en relation des artistes locaux avec des entreprises, des écoles et des incubateurs pour initier les participants au processus de création artistique. Des ateliers immersifs pour stimuler l'innovation, la cohésion d'équipe et le bien-être mental."
+  description: "Artlab est une initiave qui met en relation des artistes locaux avec des entreprises, des écoles et des incubateurs pour initier les participants au processus de création artistique." # Des ateliers immersifs pour stimuler l'innovation, la cohésion d'équipe et le bien-être mental."
   disable_theme_toggle: false
   disable_stay_uptodate: false
 
@@ -59,13 +59,14 @@ params:
     image: "images/pages/ampoule.png"
     content:
       - text: "Chez Artlab, nous croyons que la créativité est la clé de l'innovation. Nous mettons en relation des artistes locaux avec des entreprises, des écoles et des incubateurs pour favoriser la créativité à travers des ateliers artistiques pratiques et immersifs."
-      - text: "Notre mission est d'utiliser le processus créatif pour stimuler l'innovation, aider les organisations à devancer leurs concurrents, et renforcer la cohésion des équipes tout en améliorant la santé mentale et en réduisant les tensions au travail."
+      - text: "Notre mission est d'utiliser le processus créatif pour stimuler l'innovation, aider les organisations prendre du recul, et renforcer la cohésion des équipes tout en améliorant la santé mentale et en réduisant les tensions au travail."
   p2:
     heading: "Une expérience enrichissante pour tous"
-    image: "images/pages/pinceaux.jpeg"
+    image: "images/pages/mains.png"
     content:
       - text: "Durant nos ateliers de 4 heures, les participants sont invités à créer à partir de rien, guidés par des artistes professionnels qui les aident à concrétiser leurs idées. Nous offrons un espace unique où créativité et collaboration s'épanouissent."
       - text: "Nos ateliers sont conçus pour libérer la créativité et l'innovation au sein des équipes. En s'engageant dans un processus artistique guidé, les participants apprennent à penser différemment et à développer des idées novatrices qui peuvent propulser le succès de leur entreprise."
+  
   p3:
     heading: "Soutenus par des artistes passionnés"
     image: "images/pages/artiste.png"
@@ -87,6 +88,18 @@ params:
       - identifier: d
         image: "images/global/vieux.jpg"
         alt: "d"
+
+  partners:
+    heading: "Ils nous font confiance"
+    logos:
+      - image: "images/global/sample-logo.svg"
+        alt: "Partenaire 1"
+      - image: "images/global/sample-logo.svg"
+        alt: "Partenaire 2"
+      - image: "images/global/sample-logo.svg"
+        alt: "Partenaire 3"
+      - image: "images/global/sample-logo.svg"
+        alt: "Partenaire 4"
   # p4:
   #   heading: "Blog"
   #   content:
@@ -117,7 +130,7 @@ params:
 menu:
   main:
     - identifier: ateliers
-      name: Ateliers
+      name: Nos ateliers
       url: /ateliers/
       weight: 10
     - identifier: about
@@ -125,7 +138,7 @@ menu:
       url: /about/
       weight: 20
     - identifier: artistes
-      name: Nos artistes
+      name: Artistes
       url: /artistes/
       weight: 30
     - identifier: contact
@@ -134,7 +147,7 @@ menu:
       weight: 40
   footer:
     - identifier: ateliers
-      name: Ateliers
+      name: Nos ateliers
       url: /ateliers/
       weight: 10
     - identifier: about
@@ -142,7 +155,7 @@ menu:
       url: /about/
       weight: 20
     - identifier: artistes
-      name: Nos artistes
+      name: Artistes
       url: /artistes/
       weight: 30
     - identifier: contact
